@@ -1,3 +1,8 @@
+Thu Apr 17 23:07:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* testsuite/unittests/freetext_1.py: New unit test for the
+	  search_by_default and allow_field_specific fields.
+
 Thu Apr 17 22:04:34 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* docs/introduction.rst,xappy/fieldactions.py,
